//
// Copyright 2021 DXOS.org
//

syntax = "proto3";

import "dxos/halo/keys.proto";

package dxos.echo.invitation_protocol;

// Mock invitation process for data spaces

message AdmitRequest {
  dxos.keys.PublicKey identityKey = 1;
  dxos.keys.PublicKey deviceKey = 2;
  dxos.keys.PublicKey controlFeedKey = 3;
  dxos.keys.PublicKey dataFeedKey = 4;
}

// Inviter verbs
service InviterInvitationService {
  rpc Admit(AdmitRequest) returns (google.protobuf.Empty);
}

message AcceptRequest {
  dxos.keys.PublicKey spaceKey = 1;
  dxos.keys.PublicKey genesisFeedKey = 3;
}

// Invitee verbs
service InviteeInvitationService {
  rpc Accept(AcceptRequest) returns (google.protobuf.Empty);
}
